Bar chart tooltips are no longer cut off.

--- a/MHTCDashboard/src/main/webapp/css/style.css
+++ b/MHTCDashboard/src/main/webapp/css/style.css
@@ -991,10 +991,9 @@ img
 	margin-left:18%%
 }
 
-#mbody .nv-lineChart circle.nv-point
+.nvtooltip
 {
-    fill-opacity: 1;
-    stroke-opacity: 1;
+	margin-top: 75px;
 }
 
 /******login form style*****************/
